src/test/ui/recursion/issue-26548-recursion-via-normalize.stderr
error[E0275]: overflow evaluating the requirement `S: Sized`
  --> $DIR/issue-26548-recursion-via-normalize.rs:7:10
   |
LL | struct S(Option<<S as Mirror>::It>);
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `S`
  --> $DIR/issue-26548-recursion-via-normalize.rs:7:8
   |
LL | struct S(Option<<S as Mirror>::It>);
   |        ^
note: type parameters have an implicit `Sized` obligation
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | pub enum Option<T> {
   |                 ^ required by this bound in `Option`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
